<resources>
    <string name="app_name">Badoon</string>
    <string name="register_hello">Привет! Вы...</string>
    <string name="male">Мужчина</string>
    <string name="female">Девушка</string>
    <string name="login">Войти</string>
    <string name="register_name">Как вас зовут?</string>
    <string name="register_email">Какой у вас email?</string>
    <string name="login_email">Email</string>
    <string name="login_password">Пароль</string>
    <string name="register_photo">Добавим вашу фотографию</string>
    <string name="register_name_hint">Введите ваше имя</string>
    <string name="register_email_hint">Введите ваш email</string>
    <string name="register_password_hint">Введите ваш пароль</string>
    <string name="register_password">Придумайте надежный пароль</string>
    <string name="register_confirm_password_hint">Подтвердите ваш пароль</string>
    <string name="next">Продолжить</string>
    <string name="register_date_tip">Вы должны быть старше 18 лет</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="date_pick">Прикоснитесь, чтоб выбрать дату</string>
    <string name="profile_hint">Напишите пару слов о себе</string>
</resources>
