<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.android.badoonfirebase.Registration.RegisterPasswordActivity">

    <TextView
            android:id="@+id/whatIsYourPasswordTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password"
            style="@style/TextViewBig"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/whatIsYourPasswordTV"
        android:hint="@string/register_password_hint"
        app:boxStrokeColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_cancel_red_24dp"
        android:paddingHorizontal="30dp"

        app:endIconDrawable="@drawable/ic_remove_eye_black_24dp"
        >

    <com.google.android.material.textfield.TextInputEditText

        android:id="@+id/registerPasswordEditText"
        android:inputType="textPassword"
        android:hint="@string/register_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextInput"
        app:boxStrokeColor="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconCheckable="false"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_cancel_red_24dp"
        android:paddingHorizontal="30dp"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/registerConfirmPasswordEditText"
            android:inputType="textPassword"
            android:hint="@string/register_confirm_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/registerPasswordBtn"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
             android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_margin="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
    />

</RelativeLayout>