<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.android.badoonfirebase.Registration.RegisterNameActivity">

    <TextView
            android:id="@+id/whatIsYourNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_name"
            style="@style/TextViewBig"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/whatIsYourNameTV"
        android:hint="@string/register_name_hint"
        app:boxStrokeColor="@color/colorPrimary"
        app:endIconCheckable="false"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_cancel_red_24dp"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName"
            android:id="@+id/registerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerNameBtn"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        tools:targetApi="m" />

</RelativeLayout>