<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="50dp"
            android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:layout_below="@id/whatIsYourNameTV"
                app:boxStrokeColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:layout_below="@id/whatIsYourNameTV"
                app:boxStrokeColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/loginPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
            android:id="@+id/logInActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/login"

        android:textColor="@color/black"
            android:textSize="10pt"
            android:layout_margin="50dp"/>

</RelativeLayout>